--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,5 @@
 "name": "Shopping App",
 "short_name": "Shopping App",
 "start_url": "https://sircrazypaper.github.io/",
-"orientation",: "portrait"
+"orientation": "portrait"
 }
