--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,21 @@
 {
-"name": "Shopping App",
-"short_name": "Shopping App",
-"start_url": "https://sircrazypaper.github.io/",
-"orientation": "portrait"
+  "name": "Shopping App",
+  "short_name": "Shopping App",
+  "start_url": "https://sircrazypaper.github.io/",
+  "orientation": "portrait",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
+  "icons": [
+    {
+      "src": "/path/to/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/path/to/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
